--- a/start page/style.css
+++ b/start page/style.css
@@ -10,7 +10,7 @@ html {
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  background: url('background.jpg') repeat; 
+  background: url('background.jpg') repeat;
   background-size: auto;
 }
 
@@ -41,18 +41,42 @@ body:before {
 .welcome-container h1 {
   font-size: 48px;
   margin: 0;
+  background: linear-gradient(
+    90deg,
+    #f9a000,
+    #f47c33,
+    #ef5966,
+    #a53f5b,
+    #592651,
+    #302144
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  color: transparent;
 }
 
 .welcome-container p {
   font-size: 24px;
   margin: 10px 0 20px 0;
+  background: linear-gradient(
+    90deg,
+    #f9a000,
+    #f47c33,
+    #ef5966,
+    #a53f5b,
+    #592651,
+    #302144
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  color: transparent;
 }
 
 /* Credits button styling */
 #creditsButton {
   margin-left: 10px;
   padding: 15px 30px;
-  background-color: rgba(231, 76, 60, 0.8); 
+  background-color: rgba(231, 76, 60, 0.8);
   border: none;
   border-radius: 5px;
   color: white;
